# python-project-52

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-lint-test.yml
hexlet_code/: settings.py
locale/ru/LC_MESSAGES/: django.po
static/: navbar.css
task_manager/: forms.py  mixins.py  settings.py  urls.py  views.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/fixtures/: label_test.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/fixtures/: status_test.json
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  models.py  urls.py  views.py
task_manager/tasks/fixtures/: task_test.json
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  home.html  index.html
task_manager/templates/general/: general_delete_confirm.html
task_manager/templates/labels/: label_list.html
task_manager/templates/statuses/: status_list.html
task_manager/templates/tasks/: task_detail.html  task_list.html
task_manager/templates/users/: user_list.html
task_manager/tests/: test_fitlers.py  test_labels.py  test_statuses.py  test_tasks.py  test_users
task_manager/users/: apps.py  forms.py  models.py  views.py
task_manager/users/fixtures/: user_test.json
task_manager/users/migrations/: 0001_initial.py
