[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url",
    "django",
    "django-bootstrap5",
    "django-debug-toolbar",
    "django-filter",
    "gunicorn",
    "psycopg2-binary",
    "python-dotenv",
    "rollbar",
    "waitress",
    "whitenoise",
]
